--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
          </a>
           
            <a class="w-inline-block" href="#">
-          <img src="images/ScreenshotAI.png" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 88vw, 740px" alt="" class="has-shadow has-hover-animation">
+          <img src="./images/ScreenshotAI.png" sizes="(max-width: 479px) 90vw, (max-width: 767px) 87vw, (max-width: 991px) 88vw, 740px" alt="" class="has-shadow has-hover-animation">
          </a>
       
         </div>
