--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a data-w-id="a73c96af-ffb4-8180-7dce-65d3db4801bd" href="./contact-us.html" class="button-primary animated margin-right xs-margin-bottom w-inline-block">
             <div style="-webkit-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:1" class="button-primary-text">Contact Us for Details</div>
             <div style="opacity:0;display:block;-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="button-primary-text for-hover">let&#x27;s go <span class="fa margin-left"></span></div>
-          </a><a href="#" class="cta-link is-white"><span class="margin-right">Our portfolio</span> <span class="fa c-cta1_arrow-hovered"></span><span class="fa c-cta1__arrow-normal"></span></a></div>
+          </a><a href="https://github.com/iamjovani/capstone-ai-car" class="cta-link is-white"><span class="margin-right">Our Demo Code</span> <span class="fa c-cta1_arrow-hovered"></span><span class="fa c-cta1__arrow-normal"></span></a></div>
       </div>
       <div class="col lg-6"></div>
     </div>
