--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="col on-dark lg-5 md-12">
         <h1 class="size-h1">Vehicle Collision Avoidance System</h1>
-        <div class="margin-bottom">Algorithmic Game Theory</div>
+        <div class="margin-bottom">Machine Learning</div>
         <div class="flexh-align-center xs-is-wrapping">
           <a data-w-id="a73c96af-ffb4-8180-7dce-65d3db4801bd" href="./contact-us.html" class="button-primary animated margin-right xs-margin-bottom w-inline-block">
             <div style="-webkit-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:1" class="button-primary-text">Contact Us for Details</div>
